bad/assign_field_class_new_class_class_side.example_compiler_output
ERROR
[1mbad/assign_field_class_new_class_class_side.lat:10:14: [1;31merror: [0;1massigning to `Y` from incompatible type `Z`[m
	(new C).fld = new Z;
	            [1;32m^[m
